# rosaruco

./: README.md
src/QRfollowing/: CMakeLists.txt  package.xml
src/QRfollowing/scripts/: camera_intrinsics_node.py  camera_node.py  crtmovement.py  odom_control_movement.py
src/aruco_localization/: CMakeLists.txt  package.xml
src/aruco_localization/config/: camera_info.yaml
src/aruco_localization/launch/: bringup.launch  calibration.launch  detector.launch  full_demo.launch
src/aruco_localization/maps/: map.yaml
src/aruco_localization/scripts/: aruco_detector.py  camera_calibration_node.py  goal_publisher.py  localization_manager.py  motion_commander.py
