<?xml version="1.0"?>
<package format="2">
  <name>aruco_localization</name>
  <version>0.0.0</version>
  <description>ArUco-based localization and navigation nodes.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>

  <export/>
</package>
